--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-navbar-img: "/img/rainbow.jpg"
-footer-img: "/img/bleak.jpg"
+navbar-img: "/img/bleak.png"
+footer-img: "/img/rainbow.png"
 # page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
